# godot-rust-utils

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/init-system/: Cargo.toml  README.md
crates/init-system-macros/: Cargo.toml  README.md
crates/init-system-macros/src/: lib.rs
crates/init-system/src/: lib.rs  prelude.rs
crates/init-system/src/core/: init_context.rs  init_storage.rs  mod.rs
crates/init-system/src/data/: init_id.rs  mod.rs
crates/init-system/src/interfaces/: free_init.rs  get_init_context.rs  get_init_id.rs  init.rs  make_init.rs  mod.rs
crates/init-system/src/nodes/: init_system_node.rs  mod.rs
crates/init-system/tests/core/: init_api_test.rs  init_storage_management_test.rs  mod.rs  simple_usage_test.rs
