[package]
name = "init-system"
version = "0.1.0"
edition = "2024"
description = "A lifecycle and initialization system for Godot 4 games built with godot-rust."
license = "MIT"
repository = "https://github.com/optical002/godot-rust-utils"
keywords = ["godot", "gamedev", "initialization", "lifecycle"]
categories = ["game-development"]

[lib]
name = "init_system"

[dependencies]
init-system-macros = { path = "../init-system-macros", version = "0.1.0" }
godot = "0.5.0"
tracing = "0.1.44"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
